--- a/src/components/ui/label-collapse/label-collapse.module.scss
+++ b/src/components/ui/label-collapse/label-collapse.module.scss
@@ -3,7 +3,7 @@
 .labelCollapse {
     background-color: $background;
     width: fit-content;
-    gap: 1.4rem;
+    gap: 1rem;
     border-radius: 0.5rem;
 
     &__status {
@@ -19,13 +19,28 @@
         gap: 0.2rem;
         align-items: center;
         opacity: 50%;
+        &__icon {
+            color: $black;
+        }
+        &__title {
+            font-size: 0.875rem;
+            font-weight: 600;
+            color: $black;
+            margin: 0;
+        }
+    }
+
+    &__quantity {
+        gap: 0.2rem;
+        align-items: center;
+        opacity: 50%;
         margin-right: 1rem;
         &__icon {
             color: $black;
         }
         &__title {
             font-size: 0.875rem;
-            font-style: normal;
+            font-weight: 300;
             color: $black;
             margin: 0;
         }
